--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/muj-web/src/main.jsx"></script>
   </body>
 </html>
